dark mode, needs fixes.

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,5 +1,4 @@
 .searchContainer {
-  background-color: rgb(255, 246, 147);
   padding: 50px;
 }
 
